2015-04-12  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Add the ability to setup uri from another one using dialogfilechooser.

2015-04-12  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	* src/utility.cc:
	* src/utility.h:
	Refactoring code to change extension of filename (dialog save document).

2015-04-12  kitone  <kitone@gna.org>

	* configure.ac:
	Switching back to development version.

2015-04-11  kitone  <kitone@gna.org>

	* NEWS:
	* configure.ac:
	Preparing 0.50.0 release.

2015-04-11  kitone  <kitone@gna.org>

	* share/ui/Makefile.am:
	* share/ui/dialog-character-codings.ui:
	* share/ui/dialog-encodings-chooser.ui:
	* share/ui/dialog-export-text.ui:
	* share/ui/dialog-import-text.ui:
	* share/ui/dialog-open-document.ui:
	* share/ui/dialog-save-document.ui:
	* share/ui/subtitleeditor.ui:
	* src/vp/videoplayer.cc:
	* src/we/waveformeditor.h:
	Remove deprecated widget.

2015-04-11  kitone  <kitone@gna.org>

	* share/ui/dialog-character-codings.ui:
	Restore dependency to gtk+ 3.10.

2015-04-10  kitone  <kitone@gna.org>

	* share/ui/dialog-character-codings.ui:
	* src/gui/comboboxencoding.cc:
	* src/gui/dialogcharactercodings.cc:
	* src/gui/dialogcharactercodings.h:
	Fix bug #23456 : GTK3 regression: add or remove encoding dialog is broken.

2015-01-10  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.ui:
	Fix bug #23160 : Configure keyboard shortcuts does not fit hte window well.

2015-01-09  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/textcorrection.cc:
	Fix bug #22489 : Text correction - save the config, on close, save and cancel.

2015-01-09  kitone  <kitone@gna.org>

	* plugins/actions/textcorrection/patternspage.h:
	* plugins/actions/textcorrection/textcorrection.cc:
	Fix bug #22489 : Text correction - Fix error introduce with the previous
	commit and only display close button without errors.
