@@ -1,5 +1,10 @@
 2015-04-12  kitone  <kitone@gna.org>
 
+	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
+	Refactoring, using the set_filename_from_another_uri introduce in the previous commit.
+
+2015-04-12  kitone  <kitone@gna.org>
+
 	* src/gui/dialogfilechooser.cc:
 	* src/gui/dialogfilechooser.h:
 	Add the ability to setup uri from another one using dialogfilechooser.
